2002-10-28  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintCATCH_ARRAY_TYPE): Fix typo.
	* src/body.cpp (ProcessTryStatement): Detect array catch types,
	and reduce spurious catch clause duplication warnings - bug 3343.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessExecutableBodies): Pedantic warning for
	strange interface throws clauses - bug 3232.
	* src/expr.cpp (ProcessTypeExpression),
	(ProcessClassInstanceCreationExpression): Catch bad types that were
	found in right file but have invalid contents - bugs 3318, 3319.
	* src/error.h:
	* src/error.cpp (INVALID_TYPE_FOUND): New error message.
	* src/symbol.cpp (GetArrayType): Don't make array of bad type.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (GetAnonymousType): Avoid segfault on bad anonymous
	class - bug 3322.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ReadType): Always report when a type is not found
	- solves core dumps reported in bug 3319.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CanCastConvert): Fix recognition of incompatible
	casts between classes - bug 3320.

2002-10-10  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanKeyword7): Fix fallthrough that treated
	"befault" as a keyword.

2002-10-07  Eric Blake  <ebb9@email.byu.edu>

	* src/m4/ac_define_integer_bits.m4: New file.
	* acinclude.m4: Include it.
	* configure.in: Determine types of exact bitwidths required.
	* src/Makefile.am: Update file dependencies.
	* aclocal.m4:
	* configure:
	* Makefile.in:
	* doc/Makefile.in:
	* src/Makefile.in:
	* src/config.h.in: Regenerate.
	* src/platform.h (i1, i2, i4, i8, u1, u2, u4, u8): Use types of
	known size.
	* src/ast.h:
	* src/bytecode.h:
	* src/class.h:
	* src/control.h:
	* src/error.h:
	* src/option.h:
	* src/platform.h:
	* src/scanner.h:
	* src/semantic.h:
	* src/set.h:
	* src/stream.h:
	* src/symbol.h: Optimize to include fewer unnecessary headers;
	helping to speed compilation time slightly.